--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 data/VOC2012
 pseudo_mask/result
 pseudo_mask/sess
+segmentation/data/logs
+segmentation/data/scores
 data/logs/voc12/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
