--- a/segmentation/configs/voc12.yaml
+++ b/segmentation/configs/voc12.yaml
@@ -3,7 +3,7 @@ EXP:
     OUTPUT_DIR: data
 
 DATASET:
-    NAME: vocaug
+    NAME: voc
     ROOT: ../data
     LABELS: ./data/datasets/voc12/labels.txt
     N_CLASSES: 21
