--- a/segmentation/configs/voc12.yaml
+++ b/segmentation/configs/voc12.yaml
@@ -3,15 +3,16 @@ EXP:
     OUTPUT_DIR: data
 
 DATASET:
-    NAME: voc
+    # NAME: voc
+    NAME: vocaug
     ROOT: ../data
     LABELS: ./data/datasets/voc12/labels.txt
     N_CLASSES: 21
     IGNORE_LABEL: 255
     SCALES: [0.5, 0.75, 1.0, 1.25, 1.5]
     SPLIT:
-        # TRAIN: train_aug
         TRAIN: train
+        TRAIN: train_aug
         VAL: val
         TEST: test
 
