--- a/segmentation/configs/voc12.yaml
+++ b/segmentation/configs/voc12.yaml
@@ -33,7 +33,7 @@ MODEL:
     NAME: DeepLabV2_ResNet101_MSC
     N_BLOCKS: [3, 4, 23, 3]
     ATROUS_RATES: [6, 12, 18, 24]
-    INIT_MODEL: data/models/voc12/deeplabv1_resnet101/caffemodel/deeplabv2_resnet101_msc-vocaug.pth
+    INIT_MODEL: data/models/resnet101.pth
     # INIT_MODEL: data/models/voc12/deeplabv2_resnet101_msc/deeplabv2_resnet101_msc-vocaug.pth
 
 SOLVER:
