--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 data/VOC2012
-data/coco
-!data/coco/labels.txt
+data/coco2014
+
 pseudo_mask/result
 pseudo_mask/sess
+
+pseudo_mask_coco/result
+pseudo_mask_coco/sess
+
 segmentation/data/logs
 segmentation/data/scores
+
 data/logs/voc12/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
