--- a/segmentation/configs/coco.yaml
+++ b/segmentation/configs/coco.yaml
@@ -1,21 +1,21 @@
 EXP:
     ID: coco
-    OUTPUT_DIR: data
+    OUTPUT_DIR: data_coco_RIB
 
 DATASET:
     NAME: coco
-    ROOT:
-    LABELS: ./data/datasets/coco/labels.txt
-    N_CLASSES: 91
-    IGNORE_LABEL:
-    SCALES:
+    ROOT: ./data/datasets/coco_2014
+    LABELS: ./data_coco/datasets/coco/labels.txt
+    N_CLASSES: 81
+    IGNORE_LABEL: 255
+    SCALES: [0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0]
     SPLIT:
-        TRAIN:
-        VAL:
-        TEST:
+        TRAIN: train_2014
+        VAL: val_2014
+        TEST: test
 
 DATALOADER:
-    NUM_WORKERS: 0
+    NUM_WORKERS: 8
 
 IMAGE:
     MEAN:
@@ -23,24 +23,24 @@ IMAGE:
         G: 116.669
         B: 104.008
     SIZE:
-        BASE:
-        TRAIN:
+        BASE: # None
+        TRAIN: 481
         TEST: 513
 
 MODEL:
-    NAME: DeepLabV1_ResNet101
+    NAME: DeepLabV2_ResNet101_MSC
     N_BLOCKS: [3, 4, 23, 3]
-    ATROUS_RATES:
-    INIT_MODEL:
+    ATROUS_RATES: [6, 12, 18, 24]
+    INIT_MODEL: data/models/imagenet/deeplabv1_resnet101-imagenet.pth
 
 SOLVER:
     BATCH_SIZE:
-        TRAIN: 5
+        TRAIN: 10
         TEST: 1
     ITER_MAX: 100000
-    ITER_SIZE: 2
-    ITER_SAVE: 5000
-    ITER_TB: 100
+    ITER_SIZE: 1
+    ITER_SAVE: 2500
+    ITER_TB: 20
     LR_DECAY: 10
     LR: 2.5e-4
     MOMENTUM: 0.9
@@ -48,6 +48,8 @@ SOLVER:
     POLY_POWER: 0.9
     WEIGHT_DECAY: 5.0e-4
     AVERAGE_LOSS: 20
+    FREEZE_BN: True
+    BALANCE_LOSS: True
 
 CRF:
     ITER_MAX: 10
