--- a/segmentation/configs/voc12.yaml
+++ b/segmentation/configs/voc12.yaml
@@ -4,13 +4,13 @@ EXP:
 
 DATASET:
     NAME: vocaug
-    ROOT: /media/kazuto1011/Extra/VOCdevkit
+    ROOT: ../data
     LABELS: ./data/datasets/voc12/labels.txt
     N_CLASSES: 21
     IGNORE_LABEL: 255
     SCALES: [0.5, 0.75, 1.0, 1.25, 1.5]
     SPLIT:
-        TRAIN: train_aug
+        TRAIN: train
         VAL: val
         TEST: test
 
@@ -31,7 +31,7 @@ MODEL:
     NAME: DeepLabV2_ResNet101_MSC
     N_BLOCKS: [3, 4, 23, 3]
     ATROUS_RATES: [6, 12, 18, 24]
-    INIT_MODEL: data/models/coco/deeplabv1_resnet101/caffemodel/deeplabv1_resnet101-coco.pth
+    INIT_MODEL: data/models/imagenet/deeplabv1_resnet101-imagenet.pth
 
 SOLVER:
     BATCH_SIZE:
