--- a/segmentation/configs/coco.yaml
+++ b/segmentation/configs/coco.yaml
@@ -1,18 +1,19 @@
 EXP:
     ID: coco
-    OUTPUT_DIR: data
+    OUTPUT_DIR: data/coco
 
 DATASET:
     NAME: coco
-    ROOT:
+    NAME_PSEUDO: coco
+    ROOT: ../data
     LABELS: ./data/datasets/coco/labels.txt
-    N_CLASSES: 91
-    IGNORE_LABEL:
-    SCALES:
+    N_CLASSES: 81
+    IGNORE_LABEL: 255
+    SCALES: [0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0]
     SPLIT:
-        TRAIN:
-        VAL:
-        TEST:
+        TRAIN: train2014
+        VAL: val2014
+        TEST: test
 
 DATALOADER:
     NUM_WORKERS: 0
@@ -23,24 +24,24 @@ IMAGE:
         G: 116.669
         B: 104.008
     SIZE:
-        BASE:
-        TRAIN:
+        BASE: # None
+        TRAIN: 481
         TEST: 513
 
 MODEL:
-    NAME: DeepLabV1_ResNet101
+    NAME: DeepLabV2_ResNet101_MSC
     N_BLOCKS: [3, 4, 23, 3]
-    ATROUS_RATES:
-    INIT_MODEL:
+    ATROUS_RATES: [6, 12, 18, 24]
+    INIT_MODEL: data/models/imagenet/deeplabv1_resnet101-imagenet.pth
 
 SOLVER:
     BATCH_SIZE:
-        TRAIN: 5
+        TRAIN: 10
         TEST: 1
-    ITER_MAX: 100000
-    ITER_SIZE: 2
-    ITER_SAVE: 5000
-    ITER_TB: 100
+    ITER_MAX: 2
+    ITER_SIZE: 1
+    ITER_SAVE: 2500
+    ITER_TB: 20
     LR_DECAY: 10
     LR: 2.5e-4
     MOMENTUM: 0.9
