--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - python=3.7
   - pytorch
-
+  - click
   - pip:
     - numpy==1.21
     - imageio==2.19
@@ -14,8 +14,13 @@ dependencies:
     - git+https://github.com/lucasb-eyer/pydensecrf.git
     - scikit-image
 
+    - joblib
+    - omegaconf
+    - tensorflow
+    - torchnet
+    - opencv-python
 
-        
+    - gdown
     
     - cython==0.29.30
     
