--- a/environment.yml
+++ b/environment.yml
@@ -7,22 +7,23 @@ dependencies:
   - python=3.7
   - pytorch
   - click
+  - pip
+
   - pip:
     - numpy==1.21
     - imageio==2.19
     - chainercv==0.13
     - git+https://github.com/lucasb-eyer/pydensecrf.git
-    - scikit-image
+    - scikit-image==0.19.3
 
-    - joblib
-    - omegaconf
-    - tensorflow
-    - torchnet
-    - opencv-python
-
-    - gdown
-    
+    - joblib==1.1.0
+    - omegaconf==2.2.3
+    - tensorflow==2.9.1
+    - torchnet==0.0.4
+    - opencv-python==4.6.0
     - cython==0.29.30
     - pycocotools==2.0.4
-    - scikit-image==0.19.3
     - torchvision==0.12.0
+    - tqdm
+
+    - gdown
