--- a/segmentation/configs/voc12.yaml
+++ b/segmentation/configs/voc12.yaml
@@ -1,6 +1,11 @@
 EXP:
     ID: voc12
-    OUTPUT_DIR: output/voc
+    
+    # Directory for output trained using pseudolabels
+    OUTPUT_DIR: output/voc12
+
+    # Directory for output trained using ground truth labels
+    # OUTPUT_DIR: output/gt/voc12 
 
 DATASET:
     NAME: voc
