Combined coco dataloader to voc pseudo_label generator code (#2)
* Combined VOC and COCO loaders for IRN

* changed convention for specifying split

* Split run sample to voc and coco run files

* Changed iterloading to tqdm

* Updated path for model weights

* Removed deprecated division

* Fixed rounding error

* Fixed numpy deprecation error

* Fixed numpy deprecation error

* Added tqdm to make_sem_seg

* Fixed bug with eval_sem_seg

* Removed cocostuff for segmentation

* Changed n_classes for coco make cam

* Updated gt mask path for coco

* Updated cam_to_ir_label for background class COCO

* Added tqdm for cam_to_ir_label

* Updated img name for coco

* Removed padding for edge displacement

* Removed deprecated function

* Updated path for voc

* Updated path for scores, logit

* Changed output path for crf

* Updated crf logit path

* Updated logit dir

* Updated data split for coco

* Updated gtlabels path for coco

--- a/segmentation/configs/voc12.yaml
+++ b/segmentation/configs/voc12.yaml
@@ -1,10 +1,15 @@
 EXP:
     ID: voc12
-    OUTPUT_DIR: output/voc
+    
+    # Directory for output trained using pseudolabels
+    OUTPUT_DIR: output/voc12
+
+    # Directory for output trained using ground truth labels
+    # OUTPUT_DIR: output/gt/voc12 
 
 DATASET:
     NAME: voc
-    NAME_PSEUDO: pseudovoc
+    TRAIN_NAME: pseudovoc
     ROOT: ../data
     LABELS: ./data/datasets/voc12/labels.txt
     N_CLASSES: 21
